--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/3.management-resource-unit/2.modify-the-configuration-of-a-resource-unit.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/3.management-resource-unit/2.modify-the-configuration-of-a-resource-unit.md
@@ -1,12 +1,53 @@
 # 修改资源单元的配置
 
-修改资源单元配置即是调整资源单元配置中的 CPU、Memory 等的值。
+修改资源单元配置即是调大或调小资源单元配置中的 CPU、内存、日志盘容量等的值。
 
-## 前提条件
+## 注意事项
 
-在修改资源单元配置前，如果该资源单元配置正在被租户使用并且确认需要增加资源，则在增加资源的过程中必须保证 OBServer 有足够的剩余资源可用于分配。您可以通过内部表 `oceanbase.GV$OB_SERVERS` 来查询节点总资源和已经分配的资源，然后通过计算来确定是否可以修改资源单元配置。
+在修改资源单元配置前，如果该资源单元配置正在被租户使用并且确认需要增加资源，则在增加资源的过程中必须保证 OBServer 有足够的剩余资源可用于分配。您可以通过视图 `oceanbase.GV$OB_SERVERS` 来查询节点总资源和已经分配的资源，然后通过计算来确定是否可以修改资源单元配置。
 
-## 通过 SQL 语句修改资源单元的配置
+如果需要调大资源单元的配置，则修改后的资源总量都必须满足以下要求：
+
+```javascript
+Sum(min_cpu) <= CPU_CAPACITY;
+Sum(max_cpu) <= CPU_CAPACITY * resource_hard_limit;
+Sum(memory_size) <= MEM_CAPACITY;
+Sum(log_disk_size) <= LOG_DISK_CAPACITY;
+```
+
+其中：
+
+* `CPU_CAPACITY`：表示 CPU 总的容量。
+
+* `MEM_CAPACITY`：表示内存总的容量。
+
+* `LOG_DISK_CAPACITY`：表示日志盘总的容量。
+
+  日志盘总容量由集群级别的配置项 `log_disk_size` 和 `log_disk_percentage` 共同控制。其中， `log_disk_size` 用于设置 Redo 日志磁盘的大小，默认值为 `0`； `log_disk_percentage` 用于设置 Redo 日志占用其所在磁盘总空间的百分比，默认值为 `0`。两个配置项的使用规则如下：
+
+  * 如果 `log_disk_size` 的值为 `0`，`log_disk_percentage` 的值不为 `0`，则系统以 `log_disk_percentage` 配置项设置的值分配日志盘空间。
+
+  * 如果 `log_disk_size` 的值不为 `0`，则无论 `log_disk_percentage` 的值是否为 `0`，系统均以 `log_disk_size` 配置项设置的值分配日志盘空间。
+
+  * 如果 `log_disk_size` 和 `log_disk_percentage` 的值均为 `0`，则系统会根据日志和数据是否共用同一磁盘来自动计算 Redo 日志占用其所在磁盘总空间的百分比：
+
+    * 共用时，Redo 日志占用其所在磁盘总空间的百分比为 30%。
+
+    * 独占时，Redo 日志占用其所在磁盘总空间的百分比为 90%。
+
+   有关配置项 `log_disk_size` 的更多说明信息，请参见 [log_disk_size](../../../../14.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/237.log_disk_size.md)。
+
+   有关配置项 `log_disk_percentage` 的更多说明信息，请参见 [log_disk_percentage](../../../../14.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/238.log_disk_percentage.md)。
+
+* `resource_hard_limit`：是一个配置项的值。
+
+  在分配 Unit 时，系统会根据配置项 `resource_hard_limit` 的值来分配 CPU 资源。该配置项的默认值为 `100`，表示不允许超卖，取值范围为 \[0, 10000\]。
+
+  有关配置项 `resource_hard_limit` 的更多说明信息，请参见 [resource_hard_limit](../../../../5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/168.resource_hard_limit.md)。
+
+如果需要调小资源单元的配置，则需要保证修改后的 CPU、内存、日志盘容量等的资源总量大于或等于当前已经使用的日志盘空间。
+
+## 修改资源单元的配置
 
 修改资源单元配置时，可修改 CPU、内存、IOPS 及日志盘规格中的若干项，没有被修改的值将保持不变。
 
@@ -23,8 +64,8 @@ MEMORY_SIZE [=] memsize,
 
 示例：
 
-使用 `root` 用户登录集群的 `sys` 租户后，修改资源单元 `unit1` 的配置。
+使用 `root` 用户登录数据库的 `sys` 租户后，修改资源单元 `unit1` 的配置。
 
 ```sql
-obclient> ALTER RESOURCE UNIT unit1 MAX_CPU 15, MEMORY_SIZE '20G';
+obclient> ALTER RESOURCE UNIT unit1 MAX_CPU 15, MEMORY_SIZE '20G', LOG_DISK_SIZE '4G';
 ```
