--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/2.create-an-index-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/2.create-an-index-of-mysql-mode.md
@@ -4,82 +4,267 @@
 
 ## 背景信息
 
-OceanBase 数据库支持在非分区表和分区表上创建索引，索引可以是局部索引或全局索引，也可以是唯一索引或普通索引。如果是分区表的唯一索引，则局部的唯一索引必须包含表分区的分区键。
+OceanBase 数据库支持在非分区表和分区表上创建索引，索引可以是局部索引或全局索引，也可以是唯一索引或非唯一索引，还可以是空间索引。如果是分区表的唯一索引，则局部的唯一索引必须包含表分区的分区键。关于索引的更多介绍，请参见 [索引简介](../../../../1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/1.index-overview-of-mysql-mode.md) 章节。
 
 本节主要介绍如何在非分区表上创建索引，分区表上索引的创建请参见 [在分区表上建立索引](../../../4.replica-management/2.manage-partition-table/2.mysql-mode/9.create-partition-table-index-of-mysql-mode/2.local-index-of-mysql-mode.md) 章节。
 
-## 语法
+## 注意事项
 
-* 您可以通过 `CREATE INDEX` 语句为表创建索引。
+创建索引时需要注意，在 OceanBase 数据库中，索引名称在表范围内不能重复。
 
-  ```sql
-  CREATE [UNIQUE] INDEX index_name ON table_name ( column_list ) [LOCAL | GLOBAL] [ PARTITION BY column_list PARTITIONS N ] ;
-  ```
+## 添加普通索引
 
-  字段说明：
+可以使用 `CREATE TABLE` 语句、`CREATE INDEX` 语句或 `ALTER TABLE` 语句来添加普通索引。
 
-  * `UNIQUE` ：代表唯一索引。
+### 使用 `CREATE TABLE` 语句添加索引
 
-  * `table_name` ：表名，指需要创建索引的表。
+可以通过 `CREATE TABLE` 语句在创建表时即为表添加索引。
 
-  * `column_list` ：指出对哪些列进行索引，多列时各列之间用逗号分隔。
-
-  * `LOCAL` ：局部索引。MySQL 模式中在创建索引时如果不显式指定 `GLOBAL` 或 `LOCAL` ，则默认是 `LOCAL` 。
-
-  * `GLOBAL` ：全局索引。
-
-  * `PARTITION BY column_list PARTITIONS N` ：指定分区方式及类型。
-
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>索引名称在表范围内不能重复，查看索引可以通过命令 <code>SHOW INDEX</code>。</p>
-  </main>
-
-* 新增索引还有一种方法，其 SQL 语法格式如下：
-
-  ```sql
-  ALTER TABLE  table_name  
-  ADD INDEX|KEY  index_name ( column_list ) ;
-  ```
-
-该语句可以一次增加多个索引，索引关键字用 INDEX 或 KEY 都可以。
-
-## 示例
-
-为非分区表创建普通索引。
+语法如下：
 
 ```sql
-obclient> CREATE TABLE test (c1 int primary key, c2 VARCHAR(10));
-Query OK, 0 rows affected
-
-obclient> CREATE INDEX idx ON test (c1, c2);
-Query OK, 0 rows affected
-
-obclient> SHOW INDEX FROM test;
-+-------+------------+----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
-| Table | Non_unique | Key_name | Seq_in_index | Column_name | Collation | Cardinality | Sub_part | Packed | Null | Index_type | Comment   | Index_comment | Visible |
-+-------+------------+----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
-| test  |          0 | PRIMARY  |            1 | c1          | A         |        NULL | NULL     | NULL   |      | BTREE      | available |               | YES     |
-| test  |          1 | idx      |            1 | c1          | A         |        NULL | NULL     | NULL   |      | BTREE      | available |               | YES     |
-| test  |          1 | idx      |            2 | c2          | A         |        NULL | NULL     | NULL   | YES  | BTREE      | available |               | YES     |
-+-------+------------+----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
-3 rows in set
+obclient> CREATE TABLE table_name(column_name data_type,[column_name data_type,...] [UNIQUE] INDEX index_name(column_name));
 ```
 
-字段说明：
+相关参数说明如下：
 
-* `Seq_in_index` ：索引中的列序列号，一个是1一个是2，就是表明在联合索引中的顺序。
+* `table_name`：指定待创建的表的表名。
 
-* `Column_name` ：索引的列名。
+* `column_name`：指定表的列。
 
-* `Non_unique` ：如果索引不能包括重复值则为0，如果可以则为1。也就是平时所说的唯一索引。
+* `data_type`：指定表中各列对应的数据类型。
+  
+* `UNIQUE`：可选，表示唯一索引。创建唯一索引时需要添加该关键字。
 
-* `Collation` ：指的是列以什么方式存储在索引中。
+* `index_name`：指定待添加的索引的索引名。
 
-* `Cardinality` ：是基数的意思，表示索引中唯一值的数目的估计值。
+创建 `tbl1` 表，同时添加索引 `tbl1_idx1` 的示例如下：
 
-* `Sub_part` ：前置索引的意思，如果列只是被部分地编入索引，则为被编入索引的字符的数目。如果整列被编入索引，则为NULL。
+```sql
+obclient> CREATE TABLE tbl1(id INT,name VARCHAR(18),date DATE,PRIMARY KEY (id),INDEX tbl1_idx1 (date));
+Query OK, 0 rows affected
 
-* `Packed` ：指示关键字如何被压缩。如果没有被压缩，则为NULL。
+obclient> SHOW INDEX FROM tbl1;
++-------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+| Table | Non_unique | Key_name  | Seq_in_index | Column_name | Collation | Cardinality | Sub_part | Packed | Null | Index_type | Comment   | Index_comment | Visible |
++-------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+| tbl1  |          0 | PRIMARY   |            1 | id          | A         |        NULL | NULL     | NULL   |      | BTREE      | available |               | YES     |
+| tbl1  |          1 | tbl1_idx1 |            1 | date        | A         |        NULL | NULL     | NULL   | YES  | BTREE      | available |               | YES     |
++-------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+2 rows in set
+```
 
-* `Index_type` ：表示索引类型。
+### 使用 `CREATE INDEX` 语句添加索引
+
+可以通过 `CREATE INDEX` 语句为已有的表添加索引。
+
+语法如下：
+
+```sql
+obclient> CREATE [UNIQUE] INDEX index_name ON table_name (column_name);
+```
+
+相关参数说明如下：
+
+* `UNIQUE`：可选，表示唯一索引。创建唯一索引时需要添加该关键字。
+
+* `index_name`：指定待添加的索引的索引名。
+
+* `table_name` ：指定待添加索引的表的表名。
+
+* `column_name` ：指定对哪些列进行索引，指定多列时，各列之间用英文逗号分隔。
+
+创建 `tbl2` 表后，再创建索引 `tbl2_idx1` 的示例如下：
+
+```sql
+obclient> CREATE TABLE tbl2(id INT,name VARCHAR(20));
+Query OK, 0 rows affected
+
+obclient> CREATE INDEX tbl2_idx1 ON tbl2(id);
+Query OK, 0 rows affected
+
+obclient> SHOW INDEX FROM tbl2;
++-------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+| Table | Non_unique | Key_name  | Seq_in_index | Column_name | Collation | Cardinality | Sub_part | Packed | Null | Index_type | Comment   | Index_comment | Visible |
++-------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+| tbl2  |          1 | tbl2_idx1 |            1 | id          | A         |        NULL | NULL     | NULL   | YES  | BTREE      | available |               | YES     |
++-------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+1 row in set
+```
+
+### 使用 `ALTER TABLE` 语句添加索引
+
+可以通过 `ALTER TABLE` 语句为已存在的表添加索引，且该语句支持一次增加多个索引。
+
+语法如下：
+
+```sql
+obclient> ALTER TABLE table_name ADD [UNIQUE] INDEX|KEY index_name (column_name);
+```
+
+相关参数说明如下：
+
+* `table_name` ：指定待添加索引的表的表名。
+
+* `UNIQUE`：可选，表示唯一索引。创建唯一索引时需要添加该关键字。
+
+* `INDEX|KEY`：表示在该语句中，索引关键字使用 `INDEX` 或 `KEY` 都可以。
+
+* `index_name`：指定待添加的索引的索引名。
+
+* `column_name` ：指定对哪些列进行索引，指定多列时，各列之间用英文逗号分隔。
+
+创建 tbl3 表后，在添加索引 `tbl3_idx1` 的示例如下：
+
+```sql
+obclient> CREATE TABLE tbl3(id INT,name VARCHAR(20));
+Query OK, 0 rows affected
+
+obclient> ALTER TABLE tbl3 ADD INDEX tbl3_idx1(id);
+Query OK, 0 rows affected
+
+obclient> SHOW INDEX FROM tbl3;
++-------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+| Table | Non_unique | Key_name  | Seq_in_index | Column_name | Collation | Cardinality | Sub_part | Packed | Null | Index_type | Comment   | Index_comment | Visible |
++-------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+| tbl3  |          1 | tbl3_idx1 |            1 | id          | A         |        NULL | NULL     | NULL   | YES  | BTREE      | available |               | YES     |
++-------+------------+-----------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+1 row in set
+```
+
+## 添加空间索引
+
+OceanBase 数据库的 MySQL 模式支持创建空间索引。空间索引是对存储在介质上的数据位置信息的描述，可以用来提高系统对数据获取的效率。
+
+创建空间索引的语法与创建普通索引的语法基本一致，也是使用 `CREATE TABLE` 语句、`CREATE INDEX` 语句或 `ALTER TABLE` 语句来创建索引。不同的是，空间索引需要使用 `SPATIAL` 关键字，并且空间索引中的列必须为 `NOT NULL`。
+
+### 使用限制
+
+在创建空间索引前，需要了解以下使用限制：
+
+* 空间索引仅支持局部索引，不支持全局索引。
+
+* 创建空间索引的列必须定义为 `SRID` 属性，否则，在该列上添加的空间索引在后续查询时会无法生效。这是因为，创建空间索引后，在使用空间索引进行比较时，需要使用列定义中的 `SRID` 所对应的坐标系。空间索引存储了几何对象的 MBR（Minimum Bounding Rectangle）构建，而 MBR 的比较方式也依赖于 `SRID`。
+
+  关于 SRID 相关的介绍，请参见 [空间参考系统（SRS）](链接暂时无法添加)。
+
+* 只能对空间数据类型的数据列创建空间索引。OceanBase 数据库支持的空间数据类型请参见 [空间数据类型概述](sql语法中暂未添加)。
+
+* 创建空间索引的列的列属性必须为 `NOT NULL`。
+
+  如果不为 `NOT NULL`，您也可以通过 `ALTER TABLE` 语句先将该列的列属性修改为 `NOT NULL` 后再添加空间索引。修改列属性的具体操作可参见 [定义列的约束类型](../2.manage-tables-of-mysql-mode/4.define-the-constraint-type-for-a-column-of-mysql-mode.md)。
+
+### 使用 `CREATE TABLE` 语句添加空间索引
+
+语法如下：
+
+```sql
+obclient> CREATE TABLE table_name(column_g_name GEOMETRY NOT NULL SRID 4326,[column_name data_type,...] SPATIAL INDEX index_name(column_g_name));
+```
+
+相关参数说明如下：
+
+* `table_name`：指定待创建的表的表名。
+
+* `column_g_name`、`column_name`：定义表的列名。
+
+* `SRID 4326`：显示指定空间列的 `SRID`。
+
+* `data_type`：指定表中各列对应的数据类型。待添加空间索引的列的列类型必须为空间数据类型。OceanBase 数据库支持的空间数据类型请参见 [空间数据类型概述](sql语法中暂未添加)。
+
+* `index_name`：指定待添加的索引的索引名。
+
+创建 `tbl1_g` 表，同时添加空间索引 `tbl1_g_idx1` 的示例如下：
+
+```sql
+obclient> CREATE TABLE tbl1_g(id INT,name VARCHAR(18),g GEOMETRY NOT NULL SRID 4326,SPATIAL INDEX tbl1_g_idx1(g));
+Query OK, 0 rows affected
+
+obclient> SHOW INDEX FROM tbl1_g;
++--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+| Table  | Non_unique | Key_name    | Seq_in_index | Column_name | Collation | Cardinality | Sub_part | Packed | Null | Index_type | Comment   | Index_comment | Visible |
++--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+| tbl1_g |          1 | tbl1_g_idx1 |            1 | g           | A         |        NULL | NULL     | NULL   |      | SPATIAL    | available |               | YES     |
++--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+1 row in set
+```
+
+### 使用 `CREATE INDEX` 语句添加空间索引
+
+语法如下：
+
+```sql
+obclient> ALTER TABLE table_name ADD SPATIAL INDEX index_name(column_g_name);
+```
+
+相关参数说明如下：
+
+* `table_name`：指定待添加索引的表的表名。
+
+* `index_name`：指定待添加的索引的索引名。
+
+* `column_g_name`：指定对哪些列进行索引，指定多列时，各列之间用英文逗号分隔。
+
+创建 `tbl2_g` 表后，再创建空间索引 `tbl2_g_idx1` 的示例如下：
+
+```sql
+obclient> CREATE TABLE tbl2_g(id INT,name VARCHAR(20),g GEOMETRY NOT NULL SRID 4326);
+Query OK, 0 rows affected
+
+obclient> CREATE INDEX tbl2_g_idx1 ON tbl2_g(g);
+Query OK, 0 rows affected
+
+obclient> SHOW INDEX FROM tbl2_g;
++--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+| Table  | Non_unique | Key_name    | Seq_in_index | Column_name | Collation | Cardinality | Sub_part | Packed | Null | Index_type | Comment   | Index_comment | Visible |
++--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+| tbl2_g |          1 | tbl2_g_idx1 |            1 | g           | A         |        NULL | NULL     | NULL   |      | SPATIAL    | available |               | YES     |
++--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+1 row in set
+```
+
+### 使用 `ALTER TABLE` 语句添加空间索引
+
+```sql
+obclient> CREATE SPATIAL INDEX index_name ON table_name(column_g_name);
+```
+
+相关参数说明如下：
+
+* `index_name`：指定待添加的索引的索引名。
+
+* `table_name`：指定待添加索引的表的表名。
+
+* `column_g_name`：指定对哪些列进行索引，指定多列时，各列之间用英文逗号分隔。
+
+创建 `tbl3_g` 表后，再增加空间索引 `tbl3_g_idx1` 的示例如下：
+
+```sql
+obclient> CREATE TABLE tbl3_g(id INT,name VARCHAR(20),g GEOMETRY NOT NULL SRID 4326);
+Query OK, 0 rows affected
+
+obclient> ALTER TABLE tbl3_g ADD SPATIAL INDEX tbl3_g_idx1(g);
+Query OK, 0 rows affected
+
+obclient> SHOW INDEX FROM tbl3_g;
++--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+| Table  | Non_unique | Key_name    | Seq_in_index | Column_name | Collation | Cardinality | Sub_part | Packed | Null | Index_type | Comment   | Index_comment | Visible |
++--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+| tbl3_g |          1 | tbl3_g_idx1 |            1 | g           | A         |        NULL | NULL     | NULL   |      | SPATIAL    | available |               | YES     |
++--------+------------+-------------+--------------+-------------+-----------+-------------+----------+--------+------+------------+-----------+---------------+---------+
+1 row in set
+```
+
+## 相关文档
+
+更多 MySQL 模式下索引相关的内容，参见以下信息：
+
+* [索引简介](../../../../1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/1.index-overview-of-mysql-mode.md)
+
+* [创建索引](../../../../../3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/4.create-a-index-of-mysql-mode.md)。
+
+* [在分区表上建立索引](../../../4.replica-management/2.manage-partition-table/2.mysql-mode/9.create-partition-table-index-of-mysql-mode/2.local-index-of-mysql-mode.md)
+
+* [查看索引](3.view-indexes-of-mysql-mode.md)
+
+* [删除索引](4.delete-an-index-of-mysql-mode.md)
