--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/7.manage-triggers-of-mysql-mode/2.create-a-dml-trigger-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/7.manage-triggers-of-mysql-mode/2.create-a-dml-trigger-of-mysql-mode.md
@@ -23,24 +23,29 @@ CREATE
     TRIGGER trigger_name
     trigger_time trigger_event
     ON tbl_name FOR EACH ROW
-    trigger_body
+    [trigger_order]
+    trigger_body;
 
 trigger_time: { BEFORE | AFTER }
 
 trigger_event: { INSERT | UPDATE | DELETE }
+
+trigger_order: { FOLLOWS | PRECEDES } other_trigger_name
 ```
 
 语法说明：
 
 * 触发器名称 `trigger_name` 必须保持唯一。
 
-* `tbl_name` 表示建立触发器的表名，即在哪张表上建立触发器。
+* `tbl_name`：表示建立触发器的表名，即在哪张表上建立触发器。
 
-* `BEFORE` 或 `AFTER` 表示触发动作的时间，即触发器将在每一行插入到表中之前还是之后激活。
+* `BEFORE | AFTER`：表示触发动作的时间，即触发器将在每一行插入到表中之前还是之后激活。
 
-* `INSERT` 、`UPDATE` 或 `DELETE` 表示触发事件，即激活触发器的操作类型。
+* `INSERT | UPDATE | DELETE`：表示触发事件，即激活触发器的操作类型。
 
-* `FOR EACH ROW`用于定义触发器的主体，每次触发器激活时就会执行该语句，对于受触发事件影响的每一行都会执行一次。
+* `FOR EACH ROW`：用于定义触发器的主体，每次触发器激活时就会执行该语句，对于受触发事件影响的每一行都会执行一次。
+
+* `FOLLOWS | PRECEDES`：用于定义触发器顺序。OceanBase 数据库当前版本支持为具有相同触发事件和动作时间的同一个表定义多个触发器，默认情况下，具有相同触发事件和动作时间的触发器会按照创建顺序先后激活。如果希望影响触发器顺序，则可以使用 `FOLLOWS` 和 `PRECEDES` 来指定触发器顺序。如果指定 `FOLLOWS`，则新触发器在现有触发器之后激活；如果指定 `PRECEDES`，则新触发器在现有触发器之前激活。
 
 OceanBase 数据库中也定义了 `NEW.columnName` 和 `OLD.columnName`：
 
@@ -76,10 +81,9 @@ DELIMITER new_delimiter
 
 添加 `DELIMITER` 命令后， `DELIMITER` 命令后的语句再使用分号则不会报错，直到遇到设置的结束符（`#`），才认为该语句结束。
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>使用 <code>DELIMITER</code> 命令修改结束符后，待语句执行结束，请务必将结束符修改为默认符号分号（;）。</p>
-  </main>
+>**注意**
+>
+>使用 `DELIMITER` 命令修改结束符后，待语句执行结束，请务必将结束符修改为默认符号分号（;）。
 
 ## 示例
 
@@ -119,8 +123,6 @@ DELIMITER new_delimiter
 ## 触发器的使用限制
 
 MySQL 模式的触发器有以下使用限制：
-
-* 对于同一个表，不能有多个触发器具备相同的触发事件和触发动作的时间。
 
 * 只能在永久表上创建触发器，不能对临时表创建触发器。
 
