--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/7.manage-triggers-of-oracle-mode/1.trigger-overview-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/7.manage-triggers-of-oracle-mode/1.trigger-overview-of-oracle-mode.md
@@ -4,10 +4,9 @@
 
 触发器是一个独立的对象，当某个事件发生时自动地隐式运行，而且触发器不能接收参数。这里的事件指的是对数据库的表进行的 INSERT、UPDATE 及 DELETE 操作。
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>OceanBase 数据库 V2.2.7x 及以下版本仅支持表上的行级触发器。</p>
-  </main>
+>**注意**
+>
+>OceanBase 数据库 V2.2.7x 及以下版本仅支持表上的行级触发器。
 
 一个简单的触发器的触发时机有四个点：
 
@@ -29,8 +28,8 @@
 
 * INSTEAD OF 触发器
 
-    INSTEAD OF 触发器创建在不可编辑视图上，可以用于更新视图。
+  INSTEAD OF 触发器可以创建在可编辑视图与不可编辑视图上，用于更新视图。
 
 * 组合触发器
 
-    一个组合触发器中可以包含行前、行后、语句前、语句后四种触发事件中的一到四种或只包含一个 INSTEAD OF 触发事件。
+  一个组合触发器中可以包含行前、行后、语句前、语句后四种触发事件中的一到四种或只包含一个 INSTEAD OF 触发事件。
