--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/7.manage-triggers-of-oracle-mode/3.create-a-instead-of-trigger-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/7.manage-triggers-of-oracle-mode/3.create-a-instead-of-trigger-of-oracle-mode.md
@@ -1,7 +1,6 @@
 # 创建 INSTEAD OF 触发器
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/create-a-instead-of-trigger
 
-INSTEAD OF 触发器创建在不可编辑视图上，可以用于更新视图。INSTEAD OF 触发器可以确定预期的操作并在基础表上执行适当的 DML 操作。
+INSTEAD OF 触发器可以创建在可编辑视图或不可编辑视图上，用于更新视图。INSTEAD OF 触发器可以确定预期的操作并在基础表上执行适当的 DML 操作。
 
 INSTEAD OF 触发器只能是一个行级触发器。INSTEAD OF DML 触发器可以读取 OLD 和 NEW 的值，但不能修改 OLD 和 NEW 的值。
 
@@ -13,6 +12,7 @@ INSTEAD OF
 {INSERT | DELETE | UPDATE}
 ON [schema.] view_name
 [FOR EACH ROW]
+[{ FOLLOWS | PRECEDES } other_trigger_name]
 BEGIN
 ...
 END;
@@ -20,11 +20,13 @@ END;
 
 语句使用说明：
 
-* `OR REPLACE`:表示如果要创建的触发器名称已存在，则使用新的定义重新创建触发器。
+* 创建触发器的用户需要拥有 `CREATE TRIGGER` 系统权限。
+
+* `OR REPLACE`：表示如果要创建的触发器名称已存在，则使用新的定义重新创建触发器。
 
 * `view_name`：视图名，INSTEAD OF 触发器只能针对视图。
 
-* 创建触发器的用户需要拥有 `CREATE TRIGGER` 系统权限。
+* `FOLLOWS | PRECEDES`：用于定义触发器顺序。OceanBase 数据库当前版本支持为具有相同触发事件和动作时间的同一个表定义多个触发器，默认情况下，具有相同触发事件和动作时间的触发器其触发顺序不确定。如果希望指定触发器顺序，则可以使用 `FOLLOWS` 来指定新触发器在现有触发器之后激活，暂不支持使用 `PRECEDES` 指定新触发器在现有触发器之前激活，仅语法上支持 `PRECEDES`。
 
 使用 INSTEAD OF 触发器更新视图，示例如下：
 
