--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/7.manage-triggers-of-oracle-mode/4.create-a-compound-trigger-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/7.manage-triggers-of-oracle-mode/4.create-a-compound-trigger-of-oracle-mode.md
@@ -1,5 +1,5 @@
 # 创建组合触发器
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/create-a-compound-trigger
+
 一个组合触发器中可以包含行前、行后、语句前、语句后四种触发事件中的一到四种或只包含一个 INSTEAD OF 触发事件。
 
 ## 概述
@@ -26,9 +26,10 @@
 
 ```sql
 CREATE TRIGGER FOR dml_event_clause ON view_name
+[{ FOLLOWS | PRECEDES } other_trigger_name]
 COMPOUND TRIGGER
 INSTEAD OF EACH ROW IS BEGIN
-  sql_statement;
+sql_statement;
 END INSTEAD OF EACH ROW;
 ```
 
