--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/2.create-a-partition-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/2.create-a-partition-table-of-oracle-mode.md
@@ -39,6 +39,8 @@ CREATE TABLE table_name (column_name column_type[, column_name column_type])
 
 * 每个分区都有一个 `VALUES LESS THAN` 子句，它为分区指定一个非包含的上限值。分区键的任何值等于或大于这个值时将被映射到下一个分区中。
 
+* Range 分区的分区键不能是表达式。
+
 * 除第一个分区外，所有分区都隐含一个下限值，即上一个分区的上限值。
 
 * 仅允许最后一个分区的上限定义为 `MAXVALUE`，这个值没有具体的数值，并且比其他所有分区的上限都要大，也包含空值。如果最后一个 Range 分区指定了 `MAXVALUE` ，则不能新增分区。
@@ -89,17 +91,11 @@ CREATE TABLE table_name (column_name column_type[,column_name column_type])
     );
 ```
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <ul>
-    <li>
-    <p>当使用 List 分区时，分区表达式只能引用一列，不能有多列（即列向量）。</p>
-    </li>
-    <li>
-    <p>如果最后一个 List 分区指定了 <code>DEFAULT</code>，则不能新增分区。</p>
-    </li>
-    </ul>
-  </main>
+>**说明**
+>
+>* 当使用 List 分区时，分区表达式只能引用一列，不能有多列（即列向量）。
+>
+>* 如果最后一个 List 分区指定了 `DEFAULT`，则不能新增分区。
 
 ### 参数解释
 
@@ -144,10 +140,9 @@ PARTITION BY HASH(expr) PARTITIONS partition_count;
 | expr            | 指定 Hash 分区表达式。 |
 | partition_count | 指定一级分区个数。      |
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>对于 Hash 分区，创建时如果没有指定分区的名字，分区的命名由系统根据命名规则完成。对于一级分区表，则每个分区分别命名为 p0、p1、...、pn。</p>
-  </main>
+>**说明**
+>
+>对于 Hash 分区，创建时如果没有指定分区的名字，分区的命名由系统根据命名规则完成。对于一级分区表，则每个分区分别命名为 p0、p1、...、pn。
 
 ### 示例
 
@@ -229,17 +224,11 @@ partition_count | subpartition_count:
   INT_VALUE
 ```
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <ul>
-    <li>
-    <p>模板化二级分区表的每个一级分区下的二级分区都按照模板中的二级分区定义，即每个一级分区下的二级分区的定义均相同。</p>
-    </li>
-    <li>
-    <p>对于模板化二级分区表来说，二级分区的命名规则为 <code>($part_name)s($subpart_name)</code>。</p>
-    </li>
-    </ul>
-  </main>
+>**说明**
+>
+>* 模板化二级分区表的每个一级分区下的二级分区都按照模板中的二级分区定义，即每个一级分区下的二级分区的定义均相同。
+>
+>* 对于模板化二级分区表来说，二级分区的命名规则为 `($part_name)s($subpart_name)`。
 
   例如：对于下⾯的 `t_range_range` 表，`p0`下的 3 个二级分区的分区名分别为 `p0smp1`、`p0smp2`、`p0smp3`。
 
@@ -490,10 +479,9 @@ hash_partition_option_list:
   [, SUBPARTITION subpartition_name ...]
 ```
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>非模板化二级分区表的每个一级分区下的二级分区均可以自由定义，即每个一级分区下的二级分区的定义可以相同也可以不同。</p>
-  </main>
+>**说明**
+>
+>非模板化二级分区表的每个一级分区下的二级分区均可以自由定义，即每个一级分区下的二级分区的定义可以相同也可以不同。
 
 部分参数说明如下表所示。
 
