--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/9.create-partition-table-index-of-oracle-mode/3.global-index-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/9.create-partition-table-index-of-oracle-mode/3.global-index-of-oracle-mode.md
@@ -65,21 +65,23 @@ Query OK, 0 rows affected
 示例如下：
 
 ```sql
-obclient> EXPLAIN SELECT /*+index(t1 gkey)*/ * FROM t1 WHERE b=1\G
-*************************** 1. row ***************************
-Query Plan: ==========================================
-|ID|OPERATOR    |NAME    |EST. ROWS|COST |
-------------------------------------------
-|0 |TABLE LOOKUP|T1      |4950     |38645|
-|1 | TABLE SCAN |T1(GKEY)|4950     |1115 |
-==========================================
-
-Outputs & filters:
--------------------------------------
-  0 - output([T1.A], [T1.B], [T1.C]), filter(nil),
-      partitions(p[0-4])
-  1 - output([T1.A]), filter(nil),
-      access([T1.A]), partitions(p1)
+obclient> EXPLAIN SELECT /*+index(t1 gkey)*/ * FROM t1 WHERE b=1;
++---------------------------------------------------------------+
+| Query Plan                                                    |
++---------------------------------------------------------------+
+| ==========================================================    |
+| |ID|OPERATOR              |NAME    |EST.ROWS|EST.TIME(us)|    |
+| ----------------------------------------------------------    |
+| |0 |DISTRIBUTED TABLE SCAN|t1(GKEY)|4950    |38645       |    |
+| ==========================================================    |
+| Outputs & filters:                                            |
+| -------------------------------------                         |
+|   0 - output([t1.A], [t1.B], [t1.C]), filter(nil), rowset=256 |
+|       access([t1.A], [t1.B], [t1.C]), partitions(p0)          |
+|       is_index_back=true, is_global_index=true,               |
+|       range_key([t1.B], [t1.A]), range(1,MIN ; 1,MAX),        |
+|       range_cond([t1.B = 1])                                  |
++---------------------------------------------------------------+
 ```
 
-对于上述查询，首先通过 `where` 条件中的 `b=1` 条件裁剪出全局索引的分区 p1，然后对全局索引进行 `table scan` 操作以得到对应的主键。利用 `table lookup` 算子对主表进行精确的分区扫描以避免扫描主表的所有分区。
+对于上述查询，首先通过 `WHERE` 条件中的 `b=1` 条件裁剪出全局索引的分区 `p1`，然后对全局索引表进行 `table scan` 操作以得到对应的主键。利用主键对主表进行精确的分区扫描以避免扫描主表的所有分区。
