--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-for-mysql-mode/8.clear-cgroup-configuration-of-enterprise-for-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-for-mysql-mode/8.clear-cgroup-configuration-of-enterprise-for-mysql-mode.md
@@ -6,7 +6,7 @@ OceanBase 数据库的版本升级后，cgroup 的目录结构可能会有变化
 
 请确认 cgroup 配置所在的 OBServer 已停止运行，停止 OBServer 的相关操作请参见 [停止或启动 OBServer](../../../5.basic-database-management/1.manage-clusters/5.manage-observer/3.stop-or-start-observer.md)。
 
-## 操作步骤
+## 清除配置
 
 1. 使用 `admin` 用户登录 OBServer 服务器所在的机器。
 
@@ -61,4 +61,4 @@ OceanBase 数据库的版本升级后，cgroup 的目录结构可能会有变化
 
 ## 相关文档
 
-[配置 cgroups](1.config-cgroups-for-oracle-mode.md)
+[配置 cgroups ](1.config-cgroups-of-enterprise-for-mysql.md)
