--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/1.by-modifying-unit_config.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/1.by-modifying-unit_config.md
@@ -28,7 +28,7 @@
 
 确认租户是否使用了独立的资源单元配置的操作如下：
 
-1. 使用 `root` 用户登录集群的 `sys` 租户。
+1. 使用 `root` 用户登录数据库的 `sys` 租户。
 
 2. 执行以下语句，获取待操作的租户所属的资源配置 ID。
 
@@ -67,7 +67,21 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 * `MEM_CAPACITY`：表示内存总的容量。
 
-* `LOG_DISK_CAPACITY`：表示日志盘总的容量。
+* `LOG_DISK_CAPACITY`：表示日志盘总的容量。日志盘总容量由集群级别的配置项 `log_disk_size` 和 `log_disk_percentage` 共同控制。其中， `log_disk_size` 用于设置 Redo 日志磁盘的大小，默认值为 `0`； `log_disk_percentage` 用于设置 Redo 日志占用其所在磁盘总空间的百分比，默认值为 `0`。两个配置项的使用规则如下：
+
+  * 如果 `log_disk_size` 的值为 `0`，`log_disk_percentage` 的值不为 `0`，则系统以 `log_disk_percentage` 配置项设置的值分配日志盘空间。
+
+  * 如果 `log_disk_size` 的值不为 `0`，则无论 `log_disk_percentage` 的值是否为 `0`，系统均以 `log_disk_size` 配置项设置的值分配日志盘空间。
+
+  * 如果 `log_disk_size` 和 `log_disk_percentage` 的值均为 `0`，则系统会根据日志和数据是否共用同一磁盘来自动计算 Redo 日志占用其所在磁盘总空间的百分比：
+
+    * 共用时，Redo 日志占用其所在磁盘总空间的百分比为 30%。
+
+    * 独占时，Redo 日志占用其所在磁盘总空间的百分比为 90%。
+
+   有关配置项 `log_disk_size` 的更多说明信息，请参见 [log_disk_size](../../../../../7.reference/14.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/237.log_disk_size.md)。
+
+   有关配置项 `log_disk_percentage` 的更多说明信息，请参见 [log_disk_percentage](../../../../../7.reference/14.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/238.log_disk_percentage.md)。
 
 * `resource_hard_limit`：是一个配置项的值。
 
@@ -80,7 +94,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 假设当前集群中共包含 3 个可用区 `z1`、`z2`、`z3`，每个 Zone 内包含 3 台 OBServer。集群中有一个普通租户 `tenant1`，其资源分配情况如下：
 
 ```sql
-obclient> CREATE RESOURCE UNIT unit1 MAX_CPU 6, MIN_CPU 6, MEMORY_SIZE '36G', MAX_IOPS 1024, MIN_IOPS 1024, IOPS_WEIGHT=0, LOG_DISK_SIZE = '2G';
+obclient> CREATE RESOURCE UNIT unit1 MAX_CPU 6, MIN_CPU 6, MEMORY_SIZE '36G', MAX_IOPS 1024, MIN_IOPS 1024, IOPS_WEIGHT=0, LOG_DISK_SIZE = '4G';
 
 obclient> CREATE RESOURCE POOL pool1 UNIT 'unit1', UNIT_NUM 2, ZONE_LIST ('z1','z2','z3');
 
@@ -93,7 +107,7 @@ obclient>CREATE TENANT tenant1 resource_pool_list=('pool1');
 
 方法如下：
 
-1. 使用 `root` 用户登录集群的 `sys` 租户。
+1. 使用 `root` 用户登录数据库的 `sys` 租户。
 
 2. 进入 `oceanbase` 数据库。
 
@@ -122,7 +136,7 @@ obclient>CREATE TENANT tenant1 resource_pool_list=('pool1');
     +----------------+-------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_CONFIG_ID | NAME  | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
     +----------------+-------+---------+---------+-------------+---------------+----------+----------+-------------+
-    |           1001 | unit1 |       6 |       6 | 38654705664 |    2147483648 |     1024 |     1024 |           0 |
+    |           1001 | unit1 |       6 |       6 | 38654705664 |    4294967296 |     1024 |     1024 |           0 |
     +----------------+-------+---------+---------+-------------+---------------+----------+----------+-------------+
     1 row in set
     ```
@@ -132,7 +146,7 @@ obclient>CREATE TENANT tenant1 resource_pool_list=('pool1');
    * 调大 unit1 的配置
 
      ```sql
-     obclient> ALTER RESOURCE UNIT unit1 MAX_CPU 8, MIN_CPU 8, MEMORY_SIZE '40G', MAX_IOPS 1024, MIN_IOPS 1024, IOPS_WEIGHT 0, LOG_DISK_SIZE '2G';
+     obclient> ALTER RESOURCE UNIT unit1 MAX_CPU 8, MIN_CPU 8, MEMORY_SIZE '40G', MAX_IOPS 1024, MIN_IOPS 1024, IOPS_WEIGHT 0, LOG_DISK_SIZE '6G';
      ```
 
    * 调小 `unit1` 的配置
@@ -149,7 +163,7 @@ obclient>CREATE TENANT tenant1 resource_pool_list=('pool1');
 
 例如，待扩容或缩容的租户为 `tenant1`，但由于 `tenant1`、`tenant2` 均使用了 `unit1` 作为资源单元配置，因此需要创建一个新的资源单元。
 
-1. 使用 `root` 用户登录集群的 `sys` 租户。
+1. 使用 `root` 用户登录数据库的 `sys` 租户。
 
 2. 进入 `oceanbase` 数据库。
 
@@ -160,7 +174,7 @@ obclient>CREATE TENANT tenant1 resource_pool_list=('pool1');
    * 创建比当前资源单元配置高的 `unit2`
 
      ```sql
-     obclient> CREATE RESOURCE UNIT unit2 MAX_CPU 8, MIN_CPU 8, MEMORY_SIZE '20G', MAX_IOPS 1024, MIN_IOPS 1024, IOPS_WEIGHT 0, LOG_DISK_SIZE '2G';
+     obclient> CREATE RESOURCE UNIT unit2 MAX_CPU 8, MIN_CPU 8, MEMORY_SIZE '20G', MAX_IOPS 1024, MIN_IOPS 1024, IOPS_WEIGHT 0, LOG_DISK_SIZE '6G';
      ```
 
    * 创建比当前资源单元配置低的 `unit3`
