--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/3.view-indexes-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/3.view-indexes-of-mysql-mode.md
@@ -18,20 +18,40 @@ obclient> SHOW INDEX FROM test;
 3 rows in set
 ```
 
-字段说明：
+查询结果中的相关字段说明如下：
 
-* `Seq_in_index` ：索引中的列序列号，一个是1一个是2，就是表明在联合索引中的顺序。
+* `Non_unique`：如果索引不能包括重复值则为 `0`，如果可以则为 `1`。也就是通常所说的唯一索引。
 
-* `Column_name` ：索引的列名。
+* `Key_name`：索引名。
 
-* `Non_unique` ：如果索引不能包括重复值则为0，如果可以则为1。也就是平时所说的唯一索引。
+* `Seq_in_index`：索引中的列序列号，`1` 或者 `2`，用于表明该索引在联合索引中的顺序。
 
-* `Collation` ：指的是列以什么方式存储在索引中。
+* `Column_name`：索引的列名。
 
-* `Cardinality` ：是基数的意思，表示索引中唯一值的数目的估计值。
+* `Collation`：表示列以什么方式存储在索引中。
 
-* `Sub_part` ：前置索引的意思，如果列只是被部分地编入索引，则为被编入索引的字符的数目。如果整列被编入索引，则为NULL。
+* `Cardinality`：基数的意思，表示索引中唯一值的数目的估计值。
 
-* `Packed` ：指示关键字如何被压缩。如果没有被压缩，则为NULL。
+* `Sub_part`：前置索引的意思，如果列只是被部分地编入索引，则为被编入索引的字符的数目。如果整列被编入索引，则为 `NULL`。
 
-* `Index_type` ：表示索引类型。
+* `Packed`：指示关键字如何被压缩。如果没有被压缩，则为 `NULL`。
+
+* `Index_type`：表示索引类型。当前仅支持 `BTREE` 类型。
+
+* `Comment`：表示该索引是否可用。
+
+* `Index_comment`：该索引的注释信息。
+
+* `Visible`：表示该索引是否可见。
+
+## 相关文档
+
+更多 MySQL 模式下索引相关的内容，参见以下信息：
+
+* [索引简介](../../../../1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/1.index-overview-of-mysql-mode.md)
+
+* [创建索引](1.about-indexes-of-mysql-mode.md)
+
+* [在分区表上建立索引](../../../4.replica-management/2.manage-partition-table/2.mysql-mode/9.create-partition-table-index-of-mysql-mode/2.local-index-of-mysql-mode.md)
+
+* [删除索引](4.delete-an-index-of-mysql-mode.md)
