--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/4.delete-an-index-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/4.delete-an-index-of-mysql-mode.md
@@ -2,25 +2,58 @@
 
 当索引过多时，维护开销会增大，您可以根据需要删除不必要的索引。
 
-## 语法
+## 使用 `ALTER TABLE` 语句删除索引
 
-删除索引的语法格式如下：
-
-```sql
-ALTER TABLE table_name DROP key|index index_name ;
-```
-
-或者
+语法如下：
 
 ```sql
-DROP INDEX index_name ON table_name;
+obclient> ALTER TABLE table_name DROP KEY|INDEX index_name;
 ```
 
-## 示例
+相关参数说明如下：
 
-删除表的索引。示例如下：
+* `table_name`：指定待删除索引的表的表名。
+
+* `KEY|INDEX`：表示在该语句中，索引关键字使用 `INDEX` 或 `KEY` 都可以。
+
+* `index_name`：指定待删除的索引的索引名。
+
+使用 `ALTER TABLE` 语句删除表的索引的示例如下：
 
 ```sql
 obclient> ALTER TABLE t3 DROP KEY t3_uk, DROP KEY t3_ind3;
 Query OK, 0 rows affected
 ```
+
+## 使用 `DROP INDEX` 语句删除索引
+
+语法如下：
+
+```sql
+obclient> DROP INDEX index_name ON table_name;
+```
+
+相关参数说明如下：
+
+* `index_name`：指定待删除的索引的索引名。
+
+* `table_name`：指定待删除索引的表的表名。
+
+使用 `DROP INDEX` 语句删除索引的示例如下：
+
+```sql
+obclient> DROP INDEX t3_ind3 ON t3;
+Query OK, 0 rows affected
+```
+
+## 相关文档
+
+更多 MySQL 模式下索引相关的内容，参见以下信息：
+
+* [索引简介](../../../../1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/3.index-of-oracle-mode/1.index-overview-of-mysql-mode.md)
+
+* [创建索引](1.about-indexes-of-mysql-mode.md)
+
+* [在分区表上建立索引](../../../4.replica-management/2.manage-partition-table/2.mysql-mode/9.create-partition-table-index-of-mysql-mode/2.local-index-of-mysql-mode.md)
+
+* [查看索引](2.create-an-index-of-mysql-mode.md)
