--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/7.manage-triggers-of-oracle-mode/2.create-a-dml-trigger-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/7.manage-triggers-of-oracle-mode/2.create-a-dml-trigger-of-oracle-mode.md
@@ -1,5 +1,5 @@
 # 创建 DML 触发器
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/create-a-dml-trigger-2
+
 在表或视图上可以创建 DML 触发器，其触发事件由 DML 语句 `DELETE`、`INSERT` 和 `UPDATE` 组成。
 
 触发器名与存储过程名称和包的名字不一样，它是单独的名字空间，因而触发器名称可以和表或存储过程有相同的名字。创建触发器的用户需要拥有 `CREATE TRIGGER` 系统权限。
@@ -29,6 +29,7 @@ CREATE [OR REPLACE] TRIGGER trigger_name
 ON [schema.] table_name 
 [REFERENCING {OLD [AS] old | NEW [AS] new| PARENT as parent}]
 FOR EACH ROW
+[{ FOLLOWS | PRECEDES } other_trigger_name]
 [WHEN condition]
 BEGIN
 ...
@@ -37,17 +38,18 @@ END;
 
 参数解释如下表：
 
-|     **参数**     |                                   **含义**                                   |                                                **说明**                                                 |
-|----------------|----------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------|
-| BEFORE 和 AFTER | 指出触发器的触发时序分别为前触发和后触发方式。                                                    | 前触发是在执行触发事件之前触发当前所创建的触发器；后触发是在执行触发事件之后触发当前所创建的触发器。                                                    |
-| FOR EACH ROW   | 说明触发器为行触发器。                                                                | 行触发器要求当一个 DML 语句操作影响数据库中的多行数据时，对于其中的每个数据行，只要它们符合触发约束条件，均激活一次触发器。                                      |
-| REFERENCING    | 说明相关名称，在行触发器的 PL 块和 `WHEN` 子句中可以使用相关名称参照当前的新、旧列值。默认的相关名称分别为 `OLD` 和 `NEW`。 | 触发器的 PL 块中应用相关名称时，必须在它们之前加冒号（:），但在 `WHEN` 子句中不能加冒号。                                                   |
-| WHEN           | 说明触发约束条件。                                                                  | Condition 为一个逻辑表达式时，其中必须包含相关名称，而不能包含查询语句，也不能调用 PL 函数。`WHEN` 子句指定的触发约束条件只能用在 `BEFORE` 和 `AFTER` 行触发器中。 |
+|     **参数**     |                                   **含义**  |                                                **说明**                                                 |
+|----------------|-----------------------------------------------|-------------------------------------------------------------------------------------------------------|
+| `BEFORE` 和 `AFTER` | 指出触发器的触发时序分别为前触发和后触发方式。    | 前触发是在执行触发事件之前触发当前所创建的触发器；后触发是在执行触发事件之后触发当前所创建的触发器。     |
+| `FOR EACH ROW`    | 说明触发器为行触发器。                           | 行触发器要求当一个 DML 语句操作影响数据库中的多行数据时，对于其中的每个数据行，只要它们符合触发约束条件，均激活一次触发器。   |
+| `REFERENCING`     | 说明相关名称，在行触发器的 PL 块和 `WHEN` 子句中可以使用相关名称参照当前的新、旧列值。默认的相关名称分别为 `OLD` 和 `NEW`。 | 触发器的 PL 块中应用相关名称时，必须在它们之前加冒号（:），但在 `WHEN` 子句中不能加冒号。    |
+| `WHEN `           | 说明触发约束条件。                               | Condition 为一个逻辑表达式时，其中必须包含相关名称，而不能包含查询语句，也不能调用 PL 函数。`WHEN` 子句指定的触发约束条件只能用在 `BEFORE` 和 `AFTER` 行触发器中。 |
+| `FOLLOWS` 和 `PRECEDES` | 用于定义触发器顺序。                         | OceanBase 数据库当前版本支持为具有相同触发事件和动作时间的同一个表定义多个触发器，默认情况下，具有相同触发事件和动作时间的触发器其触发顺序不确定。如果希望指定触发器顺序，则可以使用 `FOLLOWS` 来指定新触发器在现有触发器之后激活，暂不支持使用 `PRECEDES` 指定新触发器在现有触发器之前激活，仅语法上支持 `PRECEDES`。|
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>当一个基表被修改（<code>INSERT</code>、<code>UPDATE</code> 或 <code>DELETE</code>）时要执行存储过程，执行触发器时根据其所依附的基表改动而自动触发，因此与应用程序无关，使用触发器可以保证数据的一致性和完整性。</p>
-  </main>
+
+>**注意**
+>
+>当一个基表被修改（`INSERT`、`UPDATE` 或 `DELETE`）时要执行存储过程，执行触发器时根据其所依附的基表改动而自动触发，因此与应用程序无关，使用触发器可以保证数据的一致性和完整性。
 
 ### 行级触发器的使用限制
 
