--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/2.resource-isolation-at-user-level-for-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/2.resource-isolation-at-user-level-for-oracle-mode.md
@@ -4,15 +4,21 @@
 
 ## 前提条件
 
-* 开始配置用户级资源隔离前，请确认您已经配置 cgroups，配置 cgroups 的详细操作请参见 [配置 cgroups](1.config-cgroups-for-oracle-mode.md)。
+* 开始配置用户级资源隔离前，建议您先了解资源组、资源管理计划、资源管理计划内容等基础概念，用户级资源隔离相关的基础概念及适用场景请参见 [概述](../1.resource-isolation-overview.md)。
 
-* 开始配置用户级资源隔离前，建议您先了解资源组、资源管理计划、资源管理计划内容等基础概念，用户级资源隔离相关的基础概念及适用场景请参见 [资源隔离概述](../1.resource-isolation-overview.md)。
+* 由于 CPU 的资源隔离依赖 cgroup，如果需要控制 CPU 的资源隔离，则在开始配置用户级资源隔离前，必须配置 cgroup 目录并开启 cgroup 功能。配置 cgroup 目录并开启 cgroup 功能的相关操作可参见 [配置 cgroups](1.config-cgroups-for-oracle-mode.md)。
+
+  如果仅需要控制 IOPS 的资源隔离，则不需要配置 cgroups。
 
 * 请确认已创建好需要进行资源隔离的用户。创建用户的详细操作请参见 [创建用户](../../../2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/1.create-user-of-oracle-mode.md)。
 
+## 背景信息
+
+  用户级的资源隔离又分为用户级 user 资源隔离和用户级 function 资源隔离两种。有关两种资源隔离的更详细说明请参见 [资源隔离概述](../1.overview.md)。
+
 ## 操作步骤
 
-以下示例中，将 `tp_user` 用户和 `ap_user` 用户分别绑定在 `big_group` 和 `small_group` 2 个资源组上，再通过资源管理计划 `plan_a` 来控制不同用户使用不同的 CPU 资源。
+以下示例中，将 `tp_user` 用户、`ap_user` 用户或 `ha_high` 任务、`ddl_high` 任务分别绑定在 `big_group` 和 `small_group` 2 个资源组上，再通过资源管理计划 `plan_a` 来控制不同用户或后台任务使用不同的 CPU 资源和 IOPS 资源。
 
 1. 租户管理员登录到集群的 Oracle 租户。
 
@@ -40,9 +46,9 @@
 
    * `COMMENT` ：填写资源组的备注信息。
 
-   创建成功后，可以查询 `DBA_RSRC_CONSUMER_GROUPS` 视图进行确认。`DBA_RSRC_CONSUMER_GROUPS` 视图的详细介绍请参见 [DBA_RSRC_CONSUMER_GROUPS](../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/122.dba_rsrc_consumer_groups-of-oracle-mode.md)。
+   创建成功后，可以查询 `DBA_RSRC_CONSUMER_GROUPS` 视图进行确认。有关 `DBA_RSRC_CONSUMER_GROUPS` 视图的详细介绍请参见 [DBA_RSRC_CONSUMER_GROUPS](../../../../12.reference-guide/5.system-view-oracle-mode/2.dictionary-view-1/113.DBA_RSRC_CONSUMER_GROUPS.md)。
 
-3. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `CREATE_PLAN` 子程序创建资源管理计划。
+3. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `CREATE_PLAN` 子程序，创建资源管理计划。
 
    ```sql
    obclient [SYS]> BEGIN DBMS_RESOURCE_MANAGER.CREATE_PLAN(
@@ -56,23 +62,31 @@
   
    * `COMMENT` ：填写资源管理计划的备注信息。
 
-   创建成功后，可以查询 `DBA_RSRC_PLANS` 视图进行确认。`DBA_RSRC_PLANS` 视图的详细介绍请参见 [DBA_RSRC_PLANS](../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/124.dba_rsrc_plans-of-oracle-mode.md)。
+   创建成功后，可以查询 `DBA_RSRC_PLANS` 视图进行确认。有关 `DBA_RSRC_PLANS` 视图的详细介绍请参见 [DBA_RSRC_PLANS](../../../../12.reference-guide/5.system-view-oracle-mode/2.dictionary-view-1/115.DBA_RSRC_PLANS.md)。
 
-4. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `CREATE_PLAN_DIRECTIVE` 子程序创建资源管理计划对应的资源管理计划内容。
+4. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `CREATE_PLAN_DIRECTIVE` 子程序，创建资源管理计划对应的资源管理计划内容，用于启用资源管理计划时，限制资源组所使用的 CPU 资源和 IOPS 资源。
 
    ```sql
    obclient [SYS]> BEGIN DBMS_RESOURCE_MANAGER.CREATE_PLAN_DIRECTIVE(
    PLAN => 'plan_a',
-   GROUP_OR_SUBPLAN => 'big_group' ,
-   MGMT_P1 => 60,
-   UTILIZATION_LIMIT => 70);
+   GROUP_OR_SUBPLAN => 'big_group',
+   COMMENT  => 'TP 优先',
+   MGMT_P1 => 90,
+   UTILIZATION_LIMIT =>60,
+   MIN_IOPS => 20,
+   MIX_IOPS => 100,
+   WEIGHT_IOPS => 20);
    END; //
 
    obclient [SYS]> BEGIN DBMS_RESOURCE_MANAGER.CREATE_PLAN_DIRECTIVE(
    PLAN => 'plan_a',
    GROUP_OR_SUBPLAN => 'small_group' ,
-   MGMT_P1 => 40,
-   UTILIZATION_LIMIT => 80);
+   COMMENT  => 'AP 优先',
+   MGMT_P1 => 100,
+   UTILIZATION_LIMIT =>40,
+   MIN_IOPS => 10,
+   MIX_IOPS => 90,
+   WEIGHT_IOPS => 30);
    END; //
    ```
 
@@ -82,48 +96,88 @@
 
    * `GROUP_OR_SUBPLAN`：指定资源组。
 
-   * `MGMT_P1`：指定系统满负载情况下，承诺分配给本资源组的 CPU 占比。
+   * `COMMENT`：填写资源管理计划内容的备注信息，默认值为 `NULL`。
 
-   * `UTILIZATION_LIMIT`：指定资源组使用的 CPU 资源的上限。 该参数的取值范围为 [0, 100]。`100` 表示最大可使用租户全部 CPU 资源。如果取值为 `70` 则表示最大可使用租户 70% 的 CPU 资源。
+   * `MGMT_P1`：指定系统满负载情况下，承诺分配给本资源组的 CPU 占比。默认值为 `100`。
 
-   创建成功，可以查询 `DBA_RSRC_PLAN_DIRECTIVES` 视图进行确认。`DBA_RSRC_PLAN_DIRECTIVES`视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/125.dba_rsrc_plan_directives-of-oracle-mode.md)。
+   * `UTILIZATION_LIMIT`：指定资源组使用的 CPU 资源的上限。该参数的默认值为 `100`，取值范围为 [0, 100]。`100` 表示最大可使用租户全部 CPU 资源。如果取值为 `40` 则表示最大可使用租户 40% 的 CPU 资源。
 
-5. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `SET_CONSUMER_GROUP_MAPPING` 子程序添加用户级资源隔离匹配规则。
+   * `MIN_IOPS`：用于出现 IO 争用时，资源组预留的 IOPS 资源，总和不超过 100，默认值为 `0`。
 
-   ```sql
-   obclient [SYS]> BEGIN DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING(
-   ATTRIBUTE => 'user',
-   VALUE => 'tp_user',
-   CONSUMER_GROUP => 'big_group');
-   END; //
+   * `MAX_IOPS`：用于指定资源组最大可使用的 IOPS 资源，总和可以超过 100，默认值为 `100`。
 
-   obclient [SYS]> BEGIN DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING(
-   ATTRIBUTE => 'user',
-   VALUE => 'ap_user',
-   CONSUMER_GROUP => 'small_group');
-   END; //
+   * `WEIGHT_IOPS`：用于指定 IOPS 的权重值，总和可以超过100，默认值为 `0`。
 
-   obclient [SYS]>delimiter ;
-   ```
+   创建成功，可以查询 `DBA_RSRC_PLAN_DIRECTIVES` 视图和 `DBA_OB_RSRC_IO_DIRECTIVES` 视图进行确认。
+   
+   有关 `DBA_RSRC_PLAN_DIRECTIVES`视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../12.reference-guide/5.system-view-oracle-mode/2.dictionary-view-1/116.DBA_RSRC_PLAN_DIRECTIVES.md)。
+   
+   有关 `DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [DBA_OB_RSRC_IO_DIRECTIVES](新增视图暂时无法添加链接)。
 
-   相关参数说明如下：
+5. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `SET_CONSUMER_GROUP_MAPPING` 子程序，根据实际使用场景，创建用户级资源隔离匹配规则。
 
-   * `ATTRIBUTE` ：指定属性类型，`column` 表示 SQL 级资源隔离，`user` 表示用户级资源隔离，属性名称不区分大小写。
+   * 创建用户级 user 资源隔离匹配规则。
 
-   * `VALUE` ：指定属性值，指定用户名即可。当前仅支持指定一个用户。
+      ```sql
+      obclient [SYS]> BEGIN DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING(
+      ATTRIBUTE => 'user',
+      VALUE => 'tp_user',
+      CONSUMER_GROUP => 'big_group');
+      END; //
 
-     在 OceanBase 数据库的 Oracle 模式中，语句执行成功后，用户名均会自动调整为大写，如果需要保持为小写，您可以通过添加双引号的方式避免其变成大写。示例如下：
+      obclient [SYS]> BEGIN DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING(
+      ATTRIBUTE => 'user',
+      VALUE => 'ap_user',
+      CONSUMER_GROUP => 'small_group');
+      END; //
 
-     ```sql
-     obclient [SYS]> DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING(
-     ATTRIBUTE       =>  'user',
-     VALUE            => '"user1"'
-     CONSUMER_GROUP   => 'big_group');
-     ```
+      obclient [SYS]>delimiter ;
+      ```
 
-   * `CONSUMER_GROUP`：指定需要绑定的资源组。表示当 SQL 命中 `VALUE` 中所设置的匹配规则后，需要绑定在哪个资源组上执行该语句。当前仅支持绑定一个资源组。
+      相关参数说明如下：
 
-   创建成功后，可以查询 `DBA_RSRC_GROUP_MAPPINGS` 视图进行确认。`DBA_RSRC_GROUP_MAPPINGS` 视图的详细介绍请参见 [DBA_RSRC_GROUP_MAPPINGS](../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/123.dba_rsrc_group_mappings-of-oracle-mode.md)。
+      * `ATTRIBUTE`：指定属性类型，`column` 表示 SQL 级资源隔离，`user` 表示用户级 user 资源隔离，`function` 表示用户级 function 资源隔离，属性名称不区分大小写。
+
+      * `VALUE`：指定属性值，指定用户名即可。当前仅支持指定一个用户。
+
+         在 OceanBase 数据库的 Oracle 模式中，语句执行成功后，用户名均会自动调整为大写，如果需要保持为小写，您可以通过添加双引号的方式避免其变成大写。示例如下：
+
+         ```sql
+         obclient [SYS]> DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING(
+         ATTRIBUTE       =>  'user',
+         VALUE            => '"user1"'
+         CONSUMER_GROUP   => 'big_group');
+         ```
+
+      * `CONSUMER_GROUP`：指定需要绑定的资源组。表示当 SQL 命中 `VALUE` 中所设置的匹配规则后，需要绑定在哪个资源组上执行该语句。当前仅支持绑定一个资源组。
+
+   * 创建用户级 function 资源隔离匹配规则。
+
+      ```sql
+      obclient [SYS]> BEGIN DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING(
+      ATTRIBUTE => 'function',
+      VALUE => 'ha_high',
+      CONSUMER_GROUP => 'big_group');
+      END; //
+
+      obclient [SYS]> BEGIN DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING(
+      ATTRIBUTE => 'function',
+      VALUE => 'ddl_high',
+      CONSUMER_GROUP => 'small_group');
+      END; //
+
+      obclient [SYS]>delimiter ;
+      ```
+
+      相关参数说明如下：
+
+      * `ATTRIBUTE`：指定属性类型，`column` 表示 SQL 级资源隔离，`user` 表示用户级 user 资源隔离，`function` 表示用户级 function 资源隔离，属性名称不区分大小写。
+
+      * `VALUE`：指定属性值，此处指定 DAG 线程对应的 8 种后台任务：compaction_high、ha_high、compaction_mid、ha_mid、compaction_low、ha_low、ddl 和 ddl_high，填写其中一个即可。当前仅支持指定一个任务。
+
+      * `CONSUMER_GROUP`：指定需要绑定的资源组。表示当 SQL 命中 `VALUE` 中所设置的匹配规则后，需要绑定在哪个资源组上执行该语句。当前仅支持绑定一个资源组。
+
+   创建成功后，可以查询 `DBA_RSRC_GROUP_MAPPINGS` 视图进行确认。有关 `DBA_RSRC_GROUP_MAPPINGS` 视图的详细介绍请参见 [DBA_RSRC_GROUP_MAPPINGS](../../../../12.reference-guide/5.system-view-oracle-mode/2.dictionary-view-1/114.DBA_RSRC_GROUP_MAPPINGS.md)。
 
 6. 为资源组启用合适的资源管理计划。
 
@@ -132,6 +186,12 @@
    ```sql
    obclient [SYS]> ALTER SYSTEM SET resource_manager_plan = 'plan_a';
    ```
+
+   <main id="notice" type='explain'>
+   <h4>说明</h4>
+   <p>如果不需要对资源进行限制，可以使用 <code>ALTER SYSTEM SET resource_manager_plan = '';</code> 语句禁用所有资源计划。</p>
+   </main>
+
 
 ## 配置后的注意事项
 
