--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/4.update-a-plan-directive-for-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/4.update-a-plan-directive-for-oracle-mode.md
@@ -10,16 +10,20 @@
 
 1. 租户管理员登录到集群的 Oracle 租户。
 
-2. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `UPDATE_PLAN_DIRECTIVE` 子程序更新资源管理计划内容。
+2. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `UPDATE_PLAN_DIRECTIVE` 子程序，更新资源管理计划内容。
 
    ```sql
    obclient [SYS]> delimiter //
 
    obclient [SYS]> BEGIN DBMS_RESOURCE_MANAGER.UPDATE_PLAN_DIRECTIVE(
    PLAN => 'plan_a',
-   GROUP_OR_SUBPLAN => 'big_group' ,
+   GROUP_OR_SUBPLAN => 'big_group',
+   NEW_COMMENT => 'new'
    NEW_MGMT_P1 => 40,
-   NEW_UTILIZATION_LIMIT => 60);
+   NEW_UTILIZATION_LIMIT => 60,
+   NEW_MIN_IOPS => 20,
+   NEW_MAX_IOPS  => 100,
+   NEW_WEIGHT_IOPS  => 10);
    END ;//
 
    obclient [SYS]> delimiter ;
@@ -27,15 +31,23 @@
 
    相关参数说明如下：
 
-   * `PLAN` ：指定新的资源管理计划名称。
+   * `PLAN`：指定新的资源管理计划名称。
 
    * `GROUP_OR_SUBPLAN`：指定新的资源组。
   
-   * `NEW_MGMT_P1` ：重新指定系统满负载情况下，承诺分配给本资源组的 CPU 占比。
+   * `NEW_COMMENT`：填写新的资源管理计划内容的备注信息。
+
+   * `NEW_MGMT_P1`：重新指定系统满负载情况下，承诺分配给本资源组的 CPU 占比。
   
    * `NEW_UTILIZATION_LIMIT`：重新指定资源组所使用的 CPU 资源的限制。
 
-3. 执行成功后，可以查看 `DBA_RSRC_PLAN_DIRECTIVES` 视图进行确认。
+   * `NEW_MIN_IOPS`：重新指定出现 IO 争用时，资源组预留的 IOPS 资源，总和不超过 100。
+
+   * `NEW_MAX_IOPS`：重新指定资源组最大可使用的 IOPS 资源，总和可以超过 100。
+
+   * `NEW_WEIGHT_IOPS`：重新指定 IOPS 的权重值，总和可以超过 100`。
+
+3. 执行成功后，可以查看 `DBA_RSRC_PLAN_DIRECTIVES` 视图和 `DBA_OB_RSRC_IO_DIRECTIVES` 视图进行确认。
 
    ```sql
    obclient [SYS]> SELECT PLAN, GROUP_OR_SUBPLAN, MGMT_P1, UTILIZATION_LIMIT FROM DBA_RSRC_PLAN_DIRECTIVES;
@@ -46,10 +58,14 @@
    | PLAN_A | SMALL_GROUP      |      40 |                70 |
    +--------+------------------+---------+-------------------+
    2 rows in set
+
+   obclient [SYS]> SELECT * FROM DBA_OB_RSRC_IO_DIRECTIVES;
    ```
 
-   `DBA_RSRC_PLAN_DIRECTIVES` 视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/125.dba_rsrc_plan_directives-of-oracle-mode.md)。
+   有关 `DBA_RSRC_PLAN_DIRECTIVES` 视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../12.reference-guide/5.system-view-oracle-mode/2.dictionary-view-1/116.DBA_RSRC_PLAN_DIRECTIVES.md)。
+
+   有关 `DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [DBA_OB_RSRC_IO_DIRECTIVES](新增视图暂时无法添加链接)。
 
 ## 相关文档
 
-[UPDATE_PLAN_DIRECTIVE](../../../../4.development-reference/3.pl-reference/4.pl-system-package/14.DBMS_RESOURCE_MANAGER/9.UPDATE_PLAN_DIRECTIVE.md)
+[UPDATE_PLAN_DIRECTIVE](../../../7.reference/7.pl-reference/3.pl-oracle/12.pl-system-package/14.DBMS_RESOURCE_MANAGER/9.UPDATE_PLAN_DIRECTIVE.md)
