--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/5.delete-a-plan-directive-for-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/5.delete-a-plan-directive-for-oracle-mode.md
@@ -40,8 +40,8 @@
    1 rows in set
    ```
 
-   `DBA_RSRC_PLAN_DIRECTIVES` 视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/125.dba_rsrc_plan_directives-of-oracle-mode.md)。
+   有关 `DBA_RSRC_PLAN_DIRECTIVES` 视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../12.reference-guide/5.system-view-oracle-mode/2.dictionary-view-1/116.DBA_RSRC_PLAN_DIRECTIVES.md)。
 
 ## 相关文档
 
-[DELETE_PLAN_DIRECTIVE](../../../../4.development-reference/3.pl-reference/4.pl-system-package/14.DBMS_RESOURCE_MANAGER/7.DELETE_PLAN_DIRECTIVE.md)
+[DELETE_PLAN_DIRECTIVE](../../../7.reference/7.pl-reference/3.pl-oracle/12.pl-system-package/14.DBMS_RESOURCE_MANAGER/7.DELETE_PLAN_DIRECTIVE.md)
