--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/7.delete-a-consumer-group-for-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-for-oracle-mode/7.delete-a-consumer-group-for-oracle-mode.md
@@ -44,8 +44,8 @@
    4 rows in set
    ```
 
-   `DBA_RSRC_CONSUMER_GROUPS` 视图的详细介绍请参见 [DBA_RSRC_CONSUMER_GROUPS](../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/122.dba_rsrc_consumer_groups-of-oracle-mode.md)。
+   有关 `DBA_RSRC_CONSUMER_GROUPS` 视图的详细介绍请参见 [DBA_RSRC_CONSUMER_GROUPS](../../../../12.reference-guide/5.system-view-oracle-mode/2.dictionary-view-1/113.DBA_RSRC_CONSUMER_GROUPS.md)。
 
 ## 相关文档
 
-[DELETE_CONSUMER_GROUP](../../../../4.development-reference/3.pl-reference/4.pl-system-package/14.DBMS_RESOURCE_MANAGER/5.DELETE_CONSUMER_GROUP.md)
+[DELETE_CONSUMER_GROUP](../../../7.reference/7.pl-reference/3.pl-oracle/12.pl-system-package/14.DBMS_RESOURCE_MANAGER/5.DELETE_CONSUMER_GROUP.md)
